# opreturn_org

./: .gitignore  Cargo.toml  OP_RETURN.html  README.md  bitcoin-iterate.sh  flake.nix  op_return.toml  results-sample  template.html
examples/: multi_recv.rs  parse_block.rs  parse_blocks.rs  read_blocks.rs
outputs/op_return/: index.html
outputs/segwit/: index.html
samples/: sample  sample10k  sample_new_1k
site/: _cobalt.yml  index.md
site/_data/: op_return.toml  stats.toml
site/_includes/: header.html
site/_layouts/: chart.liquid  default.liquid
site/contact/: index.md
site/posts/: _bip158_filter_size.md  _blockchain_size.md  _op-return-per-month.md  _op-return-protocols.md  _script-types.md  _witness-stats.md  bip158_filter_size.md  number-of-inputs-and-outputs.md  op-return-fees.md  op-return-outputs-per-month.md  op-return-per-month.md  op-return-protocols.md  op-return-sizes.md  rounded-amount.md  script-types.md  segwit-multisig.md  sighash-types.md  spent-same-block.md  spent_same_block.md  total-tx-outputs-inputs.md  veriblock.md  witness-stats.md
src/: bip69.rs  blocks.rs  charts.rs  counter.rs  fee.rs  main.rs  old_fee.rs  old_main.rs  old_parse.rs  op_return.rs  pages.rs  parse.rs  process.rs  process_bip158.rs  process_stats.rs  read.rs  reorder.rs  segwit.rs  stats.rs  templates.rs
src/old/: blocks.rs  op_return.rs  segwit.rs  stats.rs
src/pages/: bip69.rs  blockchain_and_filter_size.rs  blockchain_sizes.rs  locktime.rs  mod.rs  number_of_inputs_and_outputs.rs  op_return.rs  op_return_per_month.rs  op_return_protocols.rs  op_return_sizes.rs  rounded_amount.rs  script_types.rs  segwit_multisig.rs  sighash_types.rs  spent_same_block.rs  total_tx_outputs_inputs.rs  witness_stats.rs
src/process/: mod.rs  process_bip158.rs  (+3 more)
templates/: opreturn.html  segwit.html  template.html
