[package]
name = "opreturn_org"
version = "0.2.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>"]
edition = "2018"

[dependencies]
hex = "0.4.3"
glob = "0.3.0"
blocks_iterator = { version = "2.0.0", default-features = false }
env_logger = "0.9.0"
maud = "0.24.0"
chrono = "0.4.19"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
regex = "1"
rand = "0.8.4"
log = "0.4.22"
clap = { version = "4.5.26", features = ["derive"] }
bitcoin = "0.32.5"

[dev-dependencies]
base64 = "0.13.0"
